--- a/client/src/components/header/nav/navbar.css
+++ b/client/src/components/header/nav/navbar.css
@@ -2,22 +2,30 @@
   /* display: flex;
   flex-flow: row wrap;
   text-align: center; */
-  
+
   width: 100%;
+  height: 100%;
+  margin-left: 100px;
+  margin-right: 100px;
    /* background-color: #333;  */
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
+  font-size: x-large;
+  font-weight: bold;
+  text-decoration: none;
+
+  
 }
 
-.navigation__item {
-  flex: 1;
+.navigation__link {
+  text-decoration: none;
 }
 
 .navigation__item-active {
     color: '#fff';
-    background: '#7600dc';
+    background: #3474e6;
 }
 
 .navigation__item-inactive {
