--- a/client/src/components/confession/confessionForm/confessionForm.css
+++ b/client/src/components/confession/confessionForm/confessionForm.css
@@ -1,8 +1,39 @@
-.text {
-    /* margin: auto;
-    width: 60%; */
+
+.form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    /*align-items: flex-end;*/
+    align-content: flex-start;
+
+    width: 80%;
+    padding: 5%;
 }
+
+.form__text {
+    padding: 0% 5% 5% 0%;
+}
+
+.form__field {
+    /*background-color: #AAAAFF;*/
+}
+
+.form__field-valid {
+    border:2px solid #0000aa;
+}
+
+.form__field-invalid {
+    border:2px solid Tomato;
+}
+
+.form__field-textarea {
+    width: 100%;
+    margin: auto;
+}
+
+.form p {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
+    font-style: normal;
+}
+
