--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -3,7 +3,7 @@
      /* border: 1px solid black; 
      margin: 10px; */
     color: #fff;
-    height: 60px;   
+    height: 80px;   
     width: 100%;
    
     display: flex;
@@ -18,5 +18,5 @@
 
 .header__content {
     margin-left: 20px;
-
+    text-align: center;
 }
