--- a/client/src/components/header/nav/navbar.css
+++ b/client/src/components/header/nav/navbar.css
@@ -7,31 +7,24 @@
   height: 100%;
   margin-left: 100px;
   margin-right: 100px;
-   /* background-color: #333;  */
+  /* background-color: #333;  */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   font-size: x-large;
   font-weight: bold;
   text-decoration: none;
-
-  
 }
 
 .navigation__link {
   text-decoration: none;
 }
 
-.navigation__item-active {
-    color: '#fff';
-    background: #3474e6;
+.navigation__item--active {
+  color: #fff;
 }
 
-.navigation__item-inactive {
-  color: '#545e6f';
-  background: '#f0f0f0';
+.navigation__item--inactive {
+  color: #8AAFF2;
 }
-
-/* color: isActive ? '#fff' : '#545e6f',
-background: isActive ? '#7600dc' : '#f0f0f0', */
