--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,4 +1,13 @@
 .home {
     margin: auto;
-    width: 60%;
+    width: 80%;
+    padding: 10%;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
+
+.home p {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    font-style: normal;
+}
+
